--- a/BOSS/Makefile
+++ b/BOSS/Makefile
@@ -1,7 +1,5 @@
 CC=g++
-SDL_LDFLAGS=`sdl-config --libs` 
-SDL_CFLAGS=`sdl-config --cflags` 
-CFLAGS=-O3 $(SDL_CFLAGS)
+CFLAGS=-O3 $(SDL_CFLAGS) -std=c++11
 LDFLAGS=-lGL -lGLU -lSDL_image $(SDL_LDFLAGS)
 INCLUDES=-Isource/bwapidata/include -Isource/rapidjson -Isource
 SOURCES=$(wildcard source/bwapidata/include/*.cpp) $(wildcard source/*.cpp) 
