--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
@@ -125,6 +125,10 @@
     <ClCompile Include="..\Source\Common.cpp" />
     <ClCompile Include="..\Source\Dll.cpp" />
     <ClCompile Include="..\Source\GameCommander.cpp" />
+    <ClCompile Include="..\Source\HLCombatCommander.cpp" />
+    <ClCompile Include="..\Source\HLManager.cpp" />
+    <ClCompile Include="..\Source\HLSearch.cpp" />
+    <ClCompile Include="..\Source\HLState.cpp" />
     <ClCompile Include="..\Source\InformationManager.cpp" />
     <ClCompile Include="..\Source\Logger.cpp" />
     <ClCompile Include="..\Source\MapGrid.cpp" />
@@ -167,6 +171,10 @@
     <ClInclude Include="..\Source\DistanceMap.hpp" />
     <ClInclude Include="..\Source\EnhancedInterface.hpp" />
     <ClInclude Include="..\Source\GameCommander.h" />
+    <ClInclude Include="..\Source\HLCombatCommander.h" />
+    <ClInclude Include="..\Source\HLManager.h" />
+    <ClInclude Include="..\Source\HLSearch.h" />
+    <ClInclude Include="..\Source\HLState.h" />
     <ClInclude Include="..\Source\InformationManager.h" />
     <ClInclude Include="..\Source\Logger.h" />
     <ClInclude Include="..\Source\MapGrid.h" />
